# epymodelingsuite

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  input.yml  pyproject.toml  requirements.txt
.github/workflows/: tests-with-coverage.yml  update-documentation.yml
docs/: conf.py  index.rst
docs/source/: epymodelingsuite.builders.base.rst  epymodelingsuite.builders.interventions.rst  epymodelingsuite.builders.orchestrators.rst  epymodelingsuite.builders.rst  epymodelingsuite.builders.seasonality.rst  epymodelingsuite.builders.utils.rst  epymodelingsuite.builders.vaccination.rst  epymodelingsuite.calibration.rst  epymodelingsuite.config_loader.rst  epymodelingsuite.dispatcher.builder.rst  epymodelingsuite.dispatcher.output.rst  epymodelingsuite.dispatcher.rst  epymodelingsuite.dispatcher.runner.rst  epymodelingsuite.rst  epymodelingsuite.sample_generator.rst  epymodelingsuite.sampler.rst  epymodelingsuite.schema.basemodel.rst  epymodelingsuite.schema.calibration.rst  epymodelingsuite.schema.common.rst  epymodelingsuite.schema.dispatcher.rst  epymodelingsuite.schema.general.rst  epymodelingsuite.schema.output.rst  epymodelingsuite.schema.rst  epymodelingsuite.schema.sampling.rst  epymodelingsuite.school_closures.rst  epymodelingsuite.seasonality.rst  epymodelingsuite.telemetry.rst  epymodelingsuite.utils.common.rst  epymodelingsuite.utils.config.rst  epymodelingsuite.utils.distributions.rst  epymodelingsuite.utils.expression_eval.rst  epymodelingsuite.utils.formatting.rst  epymodelingsuite.utils.location.rst  epymodelingsuite.utils.populations.rst  epymodelingsuite.utils.rst  epymodelingsuite.vaccinations.rst  modules.rst
epymodelingsuite/: __init__.py  calibration.py  config_loader.py  sample_generator.py  sampler.py  seasonality.py  telemetry.py  vaccinations.py
epymodelingsuite/builders/: base.py  interventions.py  orchestrators.py  seasonality.py  utils.py  vaccination.py
epymodelingsuite/data/: format_calendars.py  location_codebook.csv  population_codebook.csv  school_calendars_corrected.csv  school_calendars_formatted.csv  school_calendars_old.csv
epymodelingsuite/dispatcher/: builder.py  output.py  runner.py
epymodelingsuite/schema/: __init__.py  basemodel.py  calibration.py  common.py  dispatcher.py  general.py  output.py  sampling.py
epymodelingsuite/telemetry/: __init__.py  core.py  extractors.py  resource_tracker.py
epymodelingsuite/telemetry/formatters/: __init__.py  base.py  csv.py  json.py  text.py
epymodelingsuite/utils/: __init__.py  common.py  data.py  distributions.py  expression_eval.py  formatting.py  populations.py
flumodelingsuite/: __init__.py  basemodel_validator.py  calibration.py  calibration_validator.py  common_validators.py  config_loader.py  config_loader_old.py  config_validator.py  general_validator.py  pyproject.toml  sample_generator.py  sampling_validator.py  school_closures.py  seasonality.py  telemetry.py  transition.py  utils.py  vaccinations.py  workflow_dispatcher.py
flumodelingsuite/builders/: __init__.py  base.py  interventions.py  orchestrators.py  seasonality.py  utils.py  vaccination.py
flumodelingsuite/data/: format_calendars.py  location_codebook.csv  vaccine_schedule.csv
flumodelingsuite/dispatcher/: __init__.py  builder.py  output.py  reproducer.py  runner.py
flumodelingsuite/flumodelingsuite/: school_closures.py
flumodelingsuite/flumodelingsuite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flumodelingsuite/schema/: __init__.py  basemodel.py  calibration.py  dispatcher.py  general.py  output.py  sampling.py
flumodelingsuite/utils/: __init__.py  common.py  config.py  location.py
flumodelingsuite/validation/: __init__.py  basemodel_validator.py  calibration_validator.py  common_validators.py  output_validator.py  sampling_validator.py
tests/: test_calibration_validation.py  test_general_validator.py  test_make_simulate_wrapper.py  test_seasonality.py  test_setup_interventions.py  test_telemetry.py  test_telemetry_integration.py  test_vaccinations.py  test_workflow_dispatcher.py
tests/builders/: __init__.py  test_base.py  test_make_simulate_wrapper.py  test_nonmutation.py  test_orchestrators.py  test_orchestrators_helpers.py
tests/dispatcher/: __init__.py  test_output.py
tests/schema/: test_calibration.py
tests/utils/: test_common.py  test_config.py  test_data.py  test_formatting.py
tutorials/: Tutorial_BaseModel.ipynb  Tutorial_Calibrator.ipynb  Tutorial_Dispatcher.ipynb  Tutorial_Flu_Model.ipynb  Tutorial_Flu_Model_Calibration.ipynb  Tutorial_Modelset.ipynb  Tutorial_Reproduction_and_Scenario_Projection.ipynb  Tutorial_Sampler.ipynb  Tutorial_School_Closures.ipynb  Tutorial_Seasonality.ipynb  Tutorial_Vaccinations.ipynb
tutorials/data/: basic_basemodel_calibration.yml  basic_basemodel_multipop.yml  basic_basemodel_sampling.yml  basic_basemodel_standalone.yml  basic_modelset_calibration.yml  basic_modelset_multipop.yml  basic_modelset_sampling.yml  basic_output.yaml  flu_hosp_24.csv  flu_round05_basemodel.yml  flu_round05_basemodel_sampling.yml  flu_round05_modelset_calibration.yml  flu_round05_modelset_sampling.yml  influenza_hosp_24.csv  input-flu.yml  input.yml  modelset.yml  simulation_sets.yml  tutorial_basemodel.yml  tutorial_basemodel_standalone.yml  tutorial_calibration.yml  tutorial_flu_model_calibration.yml  vaccine_scenarios_2425_ab.csv  vaccine_scenarios_2425_cd.csv  vaccine_scenarios_2425_ef.csv
