[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flumodelingsuite"
version = "0.0.1"
authors = [
  { name="Remy LeWinter", email="lewinter.r@northeastern.edu" },
  { name="Nima Moghaddas", email="moghaddas.n@northeastern.edu" },
  { name="Minami Ueda", email="ueda.m@northeastern.edu" }
]
description = "Models for influenza forecasting and scenario modeling. A codebase for working with epydemix."
dependencies = [
    "epydemix",
    "pandas",
    "numpy",
    "scipy",
    "holidays",
    "matplotlib",
    "pydantic",
    "pyyaml"
]

readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/mobs-lab/flumodelingsuite"

[tool.setuptools]
packages = [
    "flumodelingsuite",
    "flumodelingsuite.schema",
    "flumodelingsuite.builders",
    "flumodelingsuite.dispatcher",
    "flumodelingsuite.data",
]
include-package-data = true

[tool.ruff]
exclude = [
  "*.ipynb",
]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
extend-select = ["I"]
ignore = [
  "D1",    # undocumented
  "D203",  # one blank line before class
  "D205",  # blank-line-after-summary
  "D213",  # multi-line summary second line
  "E501",  # line too long
  "N806",  # non-lowercase-variable-in-function
  "TD001", # invalid todo tag
  "TD002", # missing todo author
  "TD003", # missing todo link
  "PD011", # pandas use of dot values
  "PLC0415", # import at top-level of file
  "COM812", # missing-trailing-comma
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
