[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "epymodelingsuite"
version = "0.1.0"
authors = [
  { name="Remy LeWinter", email="lewinter.r@northeastern.edu" },
  { name="Nima Moghaddas", email="moghaddas.n@northeastern.edu" },
  { name="Minami Ueda", email="ueda.m@northeastern.edu" }
]
description = "Models and calibrators for forecasting and scenario modeling. A codebase for large workloads with epydemix and expanded functionality."
dependencies = [
    "epydemix",
    "pandas",
    "numpy",
    "scipy",
    "holidays",
    "matplotlib",
    "pydantic",
    "pyyaml",
    "sphinx",
    "sphinx-pyproject",
    "autodoc_pydantic",
    "psutil",
]

readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "sphinx",
    "sphinx-pyproject",
    "autodoc_pydantic",
]

[project.urls]
Homepage = "https://github.com/mobs-lab/epymodelingsuite"

[tool.setuptools]
packages = [
    "epymodelingsuite",
    "epymodelingsuite.schema",
    "epymodelingsuite.builders",
    "epymodelingsuite.dispatcher",
    "epymodelingsuite.utils",
    "epymodelingsuite.data",
]
include-package-data = true

[tool.sphinx-pyproject]
project = "epymodelingsuite"
package_root = "epymodelingsuite"
extensions = [
    "sphinx.ext.apidoc",
    "sphinx.ext.autodoc",
    "sphinx.ext.autosummary",
]
apidoc_modules = [
    {"path" = "../epymodelingsuite", "destination"= "source/", "max_depth" = 10, "separate_modules" = true},
]
autosummary_generate = true

[tool.ruff]
exclude = [
  "*.ipynb",
]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
extend-select = ["I"]
ignore = [
  "D1",    # undocumented
  "D203",  # one blank line before class
  "D205",  # blank-line-after-summary
  "D213",  # multi-line summary second line
  "E501",  # line too long
  "N806",  # non-lowercase-variable-in-function
  "TD001", # invalid todo tag
  "TD002", # missing todo author
  "TD003", # missing todo link
  "PD011", # pandas use of dot values
  "PLC0415", # import at top-level of file
  "COM812", # missing-trailing-comma
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
